# ime-watcher-examples

linux/: Cargo.toml  readme.md
macos/: Cargo.toml
macos/src/: main.rs
windows/: Cargo.toml
